--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.10",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
@@ -28,6 +29,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
