--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "notistack": "^0.5.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
+    "react-semantic-toasts": "^0.6.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.0",
