--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "axios": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
