--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "chirpsdk": "^3.2.2",
     "react": "^16.8.4",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.10",
     "react-router-dom": "^5.1.2",
