--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.10.27",
+    "@emotion/core": "latest",
     "axios": "^0.19.0",
     "chirpsdk": "^3.2.2",
     "react": "^16.8.4",
@@ -16,8 +18,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.0",
-    "typeface-roboto": "0.0.75",
-    "@emotion/core": "latest"
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
